# refeed-rampage

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  run-em-for-cukes.sh  run-em-mock-backend.sh  run-em.sh  shut-em-down.sh
.github/workflows/: build.yml  release.yml
backend/: Cargo.toml  README.md
backend/features/: crud.feature
backend/src/: backend_types.rs  ddb_loc.txt  handlers.rs  jwtsecret.txt  main.rs  password.txt  s3_interactions.rs
backend/tests/: cucumber.rs
deployment/: README.md  config.sh  nginx.conf  rrmeals.service
docs/: index.html
docs/pkg/: README.md  package.js  package.json  package_bg.d.ts  package_bg.wasm
frontend/: Cargo.toml  Dockerfile  Makefile.toml  README.md  index.html
frontend/src/: api_loc.txt  breadcrumbs.rs  frontend_types.rs  http_bits.rs  lib.rs  navigation.rs  stars.rs
gauge-tests/: README.md  package-lock.json  package.json
gauge-tests/specs/: example.spec  frontend_crud.spec
gauge-tests/tests/: step_implementation.js
shared/: Cargo.toml  README.md
shared/src/: lib.rs
tck/: README.md  duty.yaml  routes.yaml
tck/responses/: meal1.json  meal2.json  meals.json  resp01.json
