[package]
name = "backend"
version = "0.1.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
rand = "0.7"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
