[package]
name = "frontend"
version = "0.1.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
futures = "0.3.1"
wasm-bindgen-futures = "0.4.5"
serde = { version = "^1.0.103", features = ['derive'] }
serde_json = "^1.0.44"
