[package]
name = "frontend"
version = "0.1.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "^0.6.0"
wasm-bindgen = "^0.2.50"
wasm-bindgen-futures = "0.4.5"
futures = "0.3"
serde = { version = "^1.0.103", features = ['derive'] }
serde_json = "^1.0.44"
indexmap = { version = "1.3", features = ["serde-1"] }

[dependencies.web-sys]
version = "0.3.32"
features = [
    "AbortController",
    "AbortSignal",
    "CanvasRenderingContext2d",
    "CustomEvent",
    "CustomEventInit",
    "Document",
    "DomException",
    "Element",
    "Event",
    "EventTarget",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDocument",
    "HtmlInputElement",
    "HtmlMenuItemElement",
    "HtmlProgressElement",
    "HtmlOptionElement",
    "HtmlDataElement",
    "HtmlMeterElement",
    "HtmlLiElement",
    "HtmlOutputElement",
    "HtmlParamElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Location",
    "MouseEvent",
    "Node",
    "NodeList",
    "Performance",
    "PointerEvent",
    "PopStateEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Storage",
    "Text",
    "console",
    "Window",
    "KeyboardEvent",
    "InputEvent",
    "Url",
]
